--- a/composer.json
+++ b/composer.json
@@ -16,6 +16,13 @@
       ]
     }
   },
+  "repositories": [
+  {
+    "type": "vcs",
+    "url": "https://github.com/zohaib5laravel-code/generate-footer"
+  }
+],
+
   "require": {
     "php": ">=8.1",
     "illuminate/support": "^10|^11"
