--- a/composer.json
+++ b/composer.json
@@ -18,7 +18,7 @@
   },
 "require": {
   "php": ">=8.0",
-  "illuminate/support": "^8|^9|^10|^11"
+  "illuminate/support": "^8|^9|^10|^11|^12"
 },
   "minimum-stability": "dev",
   "prefer-stable": true
