--- a/composer.json
+++ b/composer.json
@@ -3,7 +3,6 @@
   "description": "Laravel package to generate a customizable footer",
   "type": "library",
   "license": "MIT",
-  "keywords": ["laravel", "footer", "blade", "generator", "ui"],
   "autoload": {
     "psr-4": {
       "Zohaib\\GenerateFooter\\": "src/"
@@ -16,10 +15,10 @@
       ]
     }
   },
-"require": {
-  "php": ">=8.0",
-  "illuminate/support": "^9|^10|^11"
-},
+  "require": {
+    "php": ">=8.1",
+    "illuminate/support": "^12"
+  },
   "minimum-stability": "dev",
   "prefer-stable": true
 }
