--- a/composer.json
+++ b/composer.json
@@ -1,8 +1,9 @@
 {
   "name": "zohaib/generate-footer",
-  "description": "Laravel package to generate a customizable footer",
+  "description": "Laravel package to generate a static footer",
   "type": "library",
   "license": "MIT",
+  "keywords": ["laravel", "footer", "blade", "ui"],
   "autoload": {
     "psr-4": {
       "Zohaib\\GenerateFooter\\": "src/"
@@ -15,11 +16,8 @@
       ]
     }
   },
-
-"require": {
-  "php": ">=8.0",
-  "illuminate/support": "^8|^9|^10|^11|^12"
-},
-  "minimum-stability": "dev",
-  "prefer-stable": true
+  "require": {
+    "php": "^8.1",
+    "illuminate/support": "^12"
+  }
 }
